[tool.poetry]
name = "pyldt"
version = "0.1.0"
description = ""
authors = ["lopz82"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
numpy = "^1.19.4"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
matplotlib = "^3.3.3"
pandas = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
