[tool.poetry]
name = "pyldt"
version = "0.1.0"
homepage = "https://github.com/lopz82/pyldt"
authors = ["Jorge López Guzmán"]
license = "MIT License"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
numpy = "^1.19.4"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
matplotlib = "^3.3.3"
pandas = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
